changed some comments

--- a/simulation/j2s6s300_reach_on_tower.ipynb
+++ b/simulation/j2s6s300_reach_on_tower.ipynb
@@ -59,7 +59,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "This loop runs for a specified number of simulations and spawns in a block object at a random position on the table and has the arm move towards the block's postition using inverse kinematics. The robot then grasps the object before stopping the simulation and saving the joint states of the robot during the simulation and saves them to a list of joint states from every simulation. I can make this a pandas dataframe too if it is more convinient. "
+    "This loop runs for a specified number of simulations and spawns in a stack of block objects at a random position on the table and has the arm move towards the block's postition using inverse kinematics. The robot then grasps the object before stopping the simulation and saving the joint states of the robot during the simulation and saves them to a list of joint states from every simulation. I can make this a pandas dataframe too if it is more convinient. "
    ]
   },
   {
