--- a/report/main.tex
+++ b/report/main.tex
@@ -7,7 +7,7 @@
 % https://www.LaTeXTemplates.com
 %
 % Author:
-% Vel (vel@latextemplates.com)
+% Miguel Merlin (mmerlin@stevens.edu)
 %
 % License:
 % CC BY-NC-SA 4.0 (https://creativecommons.org/licenses/by-nc-sa/4.0/)
@@ -26,12 +26,16 @@
 	unnumberedsections, % Comment to enable section numbering
 	twoside, % Two side traditional mode where headers and footers change between odd and even pages, comment this option to make them fixed
 ]{LTJournalArticle}
+\usepackage{amsmath}
+\usepackage{algpseudocode}
+\usepackage{algorithm}
+\usepackage{graphicx}
 
 \addbibresource{sample.bib} % BibLaTeX bibliography file
 
-\runninghead{Shortened Running Article Title} % A shortened article title to appear in the running head, leave this command empty for no running head
+\runninghead{Generalizable Task Planning} % A shortened article title to appear in the running head, leave this command empty for no running head
 
-\footertext{\textit{Journal of Biological Sampling} (2024) 12:533-684} % Text to appear in the footer, leave this command empty for no footer text
+\footertext{\textit{Department of Computer Science} (2024) 12:533-684} % Text to appear in the footer, leave this command empty for no footer text
 
 \setcounter{page}{1} % The page number of the first page, set this to a higher number if the article is to be part of an issue or larger work
 
@@ -39,20 +43,20 @@
 %	TITLE SECTION
 %----------------------------------------------------------------------------------------
 
-\title{An Article Title That Spans Multiple\\ Lines to Show Line Wrapping} % Article title, use manual lines breaks (\\) to beautify the layout
+\title{Generalizable Task Planning} % Article title, use manual lines breaks (\\) to beautify the layout
 
 % Authors are listed in a comma-separated list with superscript numbers indicating affiliations
 % \thanks{} is used for any text that should be placed in a footnote on the first page, such as the corresponding author's email, journal acceptance dates, a copyright/license notice, keywords, etc
 \author{%
-	John Smith\textsuperscript{1,2}, Robert Smith\textsuperscript{3} and Jane Smith\textsuperscript{1}\thanks{Corresponding author: \href{mailto:jane@smith.com}{jane@smith.com}\\ \textbf{Received:} October 20, 2023, \textbf{Published:} December 14, 2023}
+	Miguel Merlin\textsuperscript{1} \thanks{Miguel Merlin: \href{mailto:mmerlin@stevens.edu}{mmerlin@stevens.edu}\\ \textbf{Last update:} April 25th, 2024}
 }
 
 % Affiliations are output in the \date{} command
-\date{\footnotesize\textsuperscript{\textbf{1}}School of Chemistry, The University of Michigan\\ \textsuperscript{\textbf{2}}Physics Department, The University of Wisconsin\\ \textsuperscript{\textbf{3}}Biological Sciences Department, The University of Minnesota}
+\date{\footnotesize\textsuperscript{\textbf{1}}Stevens Institute of Technology, Hoboken, NJ, USA}
 
 % Full-width abstract
 \renewcommand{\maketitlehookd}{%
-	\begin{abstract}
+	\begin{abstract} % TODO: Add abstract text %
 		\noindent Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent porttitor arcu luctus, imperdiet urna iaculis, mattis eros. Pellentesque iaculis odio vel nisl ullamcorper, nec faucibus ipsum molestie. Sed dictum nisl non aliquet porttitor. Etiam vulputate arcu dignissim, finibus sem et, viverra nisl. Aenean luctus congue massa, ut laoreet metus ornare in. Nunc fermentum nisi imperdiet lectus tincidunt vestibulum at ac elit. Nulla mattis nisl eu malesuada suscipit. Aliquam arcu turpis, ultrices sed luctus ac, vehicula id metus. Morbi eu feugiat velit, et tempus augue. Proin ac mattis tortor. Donec tincidunt, ante rhoncus luctus semper, arcu lorem lobortis justo, nec convallis ante quam quis lectus. Aenean tincidunt sodales massa, et hendrerit tellus mattis ac. Sed non pretium nibh. Donec cursus maximus luctus. Vivamus lobortis eros et massa porta porttitor.
 	\end{abstract}
 }
@@ -69,154 +73,191 @@
 
 \section{Introduction}
 
-Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent porttitor arcu luctus, imperdiet urna iaculis, mattis eros. Pellentesque iaculis odio vel nisl ullamcorper, nec faucibus ipsum molestie. Sed dictum nisl non aliquet porttitor. Etiam vulputate arcu dignissim, finibus sem et, viverra nisl. Aenean luctus congue massa, ut laoreet metus ornare in. Nunc fermentum nisi imperdiet lectus tincidunt vestibulum at ac elit. Nulla mattis nisl eu malesuada suscipit.
+The ability to plan for multi-step tasks is essential for home robots. The planning for everyday tasks is challenging. 
+Some of the issues faced when doing task planning are the search in high-dimensional, non-convex spaces over long time 
+horizons. Another issue is the amount of data needed to train a model capable of planning for a vast amount of home tasks. 
+Most of the task-planning approaches rely on a carefully chosen abstract geometric representation of objects in the scene 
+and analytically defined transition models, which are usually task-specific.
 
-Aliquam arcu turpis, ultrices sed luctus ac, vehicula id metus. Morbi eu feugiat velit, et tempus augue. Proin ac mattis tortor. Donec tincidunt, ante rhoncus luctus semper, arcu lorem lobortis justo, nec convallis ante quam quis lectus. Aenean tincidunt sodales massa, et hendrerit tellus mattis ac. Sed non pretium nibh. Donec cursus maximus luctus. Vivamus lobortis eros et massa porta porttitor. Donec laoreet nisl vel risus lacinia elementum non nec lacus. Nullam luctus, nulla volutpat ultricies ultrices, quam massa placerat augue, ut fringilla urna lectus nec nibh. Vestibulum efficitur condimentum orci a semper. Pellentesque ut metus pretium lacus maximus semper.
+\par
+Recent developments in Machine Learning have shown that extracting generalizable features of objects in the training 
+set is possible. This can help create higher-level policies capable of generalizing different tasks. However, there 
+are some challenges when trying to apply skills with a higher-level policy. Planning with manipulation skills (higher-level policies) 
+requires modeling the effect the skill has on the environment. Scene representation derived from learning abstract concepts such as 
+\(\verb|on-top|\) or \(\verb|on-hand|\) may not be sufficient for accurate task planning. 
 
-Fusce varius orci ac magna dapibus porttitor. In tempor leo a neque bibendum sollicitudin. Nulla pretium fermentum nisi, eget sodales magna facilisis eu. Praesent aliquet nulla ut bibendum lacinia. Donec vel mauris vulputate, commodo ligula ut, egestas orci. Suspendisse commodo odio sed hendrerit lobortis. Donec finibus eros erat, vel ornare enim mattis et. Donec finibus dolor quis dolor tempus consequat. Mauris fringilla dui id libero egestas, ut mattis neque ornare. Ut condimentum urna pharetra ipsum consequat, eu interdum elit cursus. Vivamus scelerisque tortor et nunc ultricies, id tincidunt libero pharetra. Aliquam eu imperdiet leo. Morbi a massa volutpat velit condimentum convallis et facilisis dolor.
-
-\begin{equation}
-	\cos^3 \theta =\frac{1}{4}\cos\theta+\frac{3}{4}\cos 3\theta
-	\label{eq:example}
-\end{equation}
-
-Automatically referencing an equation number using its label: Equation \ref{eq:example}.
-
-In hac habitasse platea dictumst. Curabitur mattis elit sit amet justo luctus vestibulum. In hac habitasse platea dictumst. Pellentesque lobortis justo enim, a condimentum massa tempor eu. Ut quis nulla a quam pretium eleifend nec eu nisl. Nam cursus porttitor eros, sed luctus ligula convallis quis. Nam convallis, ligula in auctor euismod, ligula mauris fringilla tellus, et egestas mauris odio eget diam. Praesent sodales in ipsum eu dictum. Aenean vel enim ipsum. Fusce ut felis at eros sagittis bibendum mollis lobortis libero.
-
-Maecenas consectetur metus at tellus finibus condimentum. Proin arcu lectus, ultrices non tincidunt et, tincidunt ut quam. Integer luctus posuere est, non maximus ante dignissim quis. Nunc a cursus erat. Curabitur suscipit nibh in tincidunt sagittis. Nam malesuada vestibulum quam id gravida. Proin ut dapibus velit. Vestibulum eget quam quis ipsum semper convallis. Duis consectetur nibh ac diam dignissim, id condimentum enim dictum. Nam aliquet ligula eu magna pellentesque, nec sagittis leo lobortis. Aenean tincidunt dignissim egestas.
-
-%------------------------------------------------
-
-\section{Methodologies}
-
-\subsection{Sample Sites \& Processing}
-
-This line shows how to use a footnote to further explain or cite text\footnote{Example footnote text.}.
-
-This is a bullet point list:
-
-\begin{itemize}
-	\item Arcu eros accumsan lorem, at posuere mi diam sit amet tortor
-	\item Fusce fermentum, mi sit amet euismod rutrum
-	\item Sem lorem molestie diam, iaculis aliquet sapien tortor non nisi
-	\item Pellentesque bibendum pretium aliquet
-\end{itemize}
-
-Mauris interdum porttitor fringilla. Proin tincidunt sodales leo at ornare. Donec tempus magna non mauris gravida luctus. Cras vitae arcu vitae mauris eleifend scelerisque. Nam sem sapien, vulputate nec felis eu, blandit convallis risus. Pellentesque sollicitudin venenatis tincidunt. In et ipsum libero. Nullam tempor ligula a massa convallis pellentesque.
-
-This is a numbered list:
-
-\begin{enumerate}
-	\item Donec dolor arcu, rutrum id molestie in, viverra sed diam
-	\item Curabitur feugiat
-	\item Turpis sed auctor facilisis
-\end{enumerate}
-
-\subsection{Species Identification}
-
-Proin lobortis efficitur dictum. Pellentesque vitae pharetra eros, quis dignissim magna. Sed tellus leo, semper non vestibulum vel, tincidunt eu mi. Aenean pretium ut velit sed facilisis. Ut placerat urna facilisis dolor suscipit vehicula. Ut ut auctor nunc. Nulla non massa eros. Proin rhoncus arcu odio, eu lobortis metus sollicitudin eu. Duis maximus ex dui, id bibendum diam dignissim id. Aliquam quis lorem lorem. Phasellus sagittis aliquet dolor, vulputate cursus dolor convallis vel. Suspendisse eu tellus feugiat, bibendum lectus quis, fermentum nunc. Nunc euismod condimentum magna nec bibendum. Curabitur elementum nibh eu sem cursus, eu aliquam leo rutrum. Sed bibendum augue sit amet pharetra ullamcorper. Aenean congue sit amet tortor vitae feugiat.
-
-Mauris interdum porttitor fringilla. Proin tincidunt sodales leo at ornare. Donec tempus magna non mauris gravida luctus. Cras vitae arcu vitae mauris eleifend scelerisque. Nam sem sapien, vulputate nec felis eu, blandit convallis risus. Pellentesque sollicitudin venenatis tincidunt. In et ipsum libero. Nullam tempor ligula a massa convallis pellentesque.
-
-\subsection{Data Analysis}
-
-Vestibulum sodales orci a nisi interdum tristique. In dictum vehicula dui, eget bibendum purus elementum eu. Pellentesque lobortis mattis mauris, non feugiat dolor vulputate a. Cras porttitor dapibus lacus at pulvinar. Praesent eu nunc et libero porttitor malesuada tempus quis massa. Aenean cursus ipsum a velit ultricies sagittis. Sed non leo ullamcorper, suscipit massa ut, pulvinar erat. Aliquam erat volutpat. Nulla non lacus vitae mi placerat tincidunt et ac diam. Aliquam tincidunt augue sem, ut vestibulum est volutpat eget. Suspendisse potenti. Integer condimentum, risus nec maximus elementum, lacus purus porta arcu, at ultrices diam nisl eget urna. Curabitur sollicitudin diam quis sollicitudin varius. Ut porta erat ornare laoreet euismod. In tincidunt purus dui, nec egestas dui convallis non. In vestibulum ipsum in dictum scelerisque.
-
-Mauris interdum porttitor fringilla. Proin tincidunt sodales leo at ornare. Donec tempus magna non mauris gravida luctus. Cras vitae arcu vitae mauris eleifend scelerisque. Nam sem sapien, vulputate nec felis eu, blandit convallis risus. Pellentesque sollicitudin venenatis tincidunt. In et ipsum libero. Nullam tempor ligula a massa convallis pellentesque. Mauris interdum porttitor fringilla. Proin tincidunt sodales leo at ornare. Donec tempus magna non mauris gravida luctus. Cras vitae arcu vitae mauris eleifend scelerisque. Nam sem sapien, vulputate nec felis eu, blandit convallis risus. Pellentesque sollicitudin venenatis tincidunt. In et ipsum libero. Nullam tempor ligula a massa convallis pellentesque.
+\par
+The objective of this paper is to create a learning-to-plan method that is able to generalize task planning with unseen objects. 
+This method has two stages. The first stage extracts the object-level embedding from a raw RGB-D observation of the scene. 
+This first module of the method generates a set of high-level semantic attributes (Predicates) of the objects in the scene. The 
+second stage is a planning framework that uses the high-level semantic attributes of the first stage to generate a sequence of skills 
+that will achieve a goal task. We evaluate the method with one manipulation task, stacking cubes of blocks. 
 
 %------------------------------------------------
 
-\section{Results}
+\section{Methodology}
 
-\begin{table} % Single column table
-	\caption{Example single column table.}
+We propose a two-stage framework to achieve generalizable task planning. The first stage is trained as a segmentation encoder used to 
+extract object-level features and produce a set of predicates that represent the state of the objects in the scene. The second stage 
+consists of a task planner that uses a search-based method for long-horizon tasks. 
+
+\subsection{Problem Setup}
+
+Consider a planning problem in a partially observable setting. The goal of the framework is to take an observation \(o \in O\) as 
+input and plan a sequence of parameterized skills to reach a task goal \(g \in G\). The goal is a set of known symbolic 
+predicates \(g = \{p_1, p_2,\dots\}\) that represent the object-level state of the environment. For example, the goal of stacking a 
+block on top of another block: \( p_1 = \verb|OnTop(Blue Block, Red Block)|\). The observation will be in the form of segmentation-masked 
+images derived from a point-cloud image of the scene. 
+
+\subsection{Parameterized Skills}
+
+A parameterized skill is represented as a set of four functions: \(s = (L_P, L_E, \pi, f_T)\), where \(L_p\) is the set of logical 
+preconditions necessary to execute the skill, \(L_E\) is the set of expected logical effects, \(\pi\) is a visuomotor policy 
+(Reinforcement learning algorithm) and \(f_T\) is the termination condition of the policy. The skills are parameterized by an optional 
+number of objects. Each policy \(\pi\) is either learned or manually designed. The learned policies are learned from the generated expert
+policy using imitation learning. During execution the trained policies operate on the object-level predicates derived from a point cloud.
+
+\subsection{Search Based Planning}
+The task planning problem consists to find list of parameterized skills that will achieve the goal. The list of parameterized skills is
+defined as follows: \(\{(\pi, \theta)_t\}^T_{t=1}\) such that the goal condition is satisfied at the end of the sequence. A task is considered
+succesful if and only if all the all conditions have been met. A breadth-first search is used to find the optimal sequence of skills. The objective
+of the search algoritm is to take a pair of start and goal state and generate a sequence of skills that will transform the start state into the goal state.
+\begin{figure}[htb]
+	\centering
+	\includegraphics[width=0.5\textwidth]{figures/bfs_predicates.png}
+	\caption{Caption describing your figure.}
+	\label{fig:yourlabel}
+  \end{figure}
+  
+
+\subsection{Skills and Predicate Learning}
+
+Consider the robot's joint states as \(q \in Q\) and the camera observation as \(o \in O\). Each of the actions in the task planning corresponds
+to a skill \(s \in S\). Each skill has a corresponding visuomotor policy \(\pi\) that is learned from expert demonstrations. The policy predicts the
+next state \(q\) for the robot given an observation \(o\). Given a sequence of states and observations in an expert trajectory \(\{(q_t, o_t)\}^T_{t=0}\),the
+skill is trained to predict a state \(q_{t+1}\) for an observation \(o_t\). Each skill also has a termination policiy that outputs a binary value indicating
+if the skill has been completed. The termination policy is trained to predict the termination condition of the skill. 
+
+\subsection{Learning Transition Model}
+Another challenge of task planning is to predict the effects of skills so that the robot could determine the best skill plan to reach a goal. For simplicity
+purposes the Transition Model (Effects on the environment for a given skill) gave been hardcoded, however transition models could also be learned. Generalizable
+transition models are subject to further research, as creating a model that can predict the effects of a skill on the environment is a challenging task given the specific
+effect of skills under certain environments.
+
+
+\begin{table}
+	\caption{Learned Skills and Predicates.}
 	\centering
 	\begin{tabular}{l l r}
 		\toprule
-		\multicolumn{2}{c}{Location} \\
 		\cmidrule(r){1-2}
-		East Distance & West Distance & Count \\
+		Name & Description & Type \\
 		\midrule
-		100km & 200km & 422 \\
-		350km & 1000km & 1833 \\
-		600km & 1200km & 890 \\
+		ReachOnTable & Reach object & Skill \\
+		ReachOnTower & Reach object & Skill \\
+		Stack & Stack object & Skill \\
+		On & On Top & Predicate \\
+		InHand & In Hand & Predicate \\
 		\bottomrule
 	\end{tabular}
 	\label{tab:distcounts}
 \end{table}
 
-Referencing a table using its label: Table \ref{tab:distcounts}.
-
-\begin{table*} % Full width table (notice the starred environment)
-	\caption{Example two column table with fixed-width columns.}
-	\centering % Horizontally center the table
-	\begin{tabular}{L{0.2\linewidth} L{0.2\linewidth} R{0.15\linewidth}} % Manually specify column alignments with L{}, R{} or C{} and widths as a fixed amount, usually as a proportion of \linewidth
-		\toprule
-		\multicolumn{2}{c}{Location} \\
-		\cmidrule(r){1-2}
-		East Distance & West Distance & Count \\
-		\midrule
-		100km & 200km & 422 \\
-		350km & 1000km & 1833 \\
-		600km & 1200km & 890 \\
-		\bottomrule
-	\end{tabular}
-\end{table*}
-
-Aenean feugiat pellentesque venenatis. Sed faucibus tristique tortor vel ultrices. Donec consequat tellus sapien. Nam bibendum urna mauris, eget sagittis justo gravida vel. Mauris nisi lacus, malesuada sit amet neque ut, venenatis tempor orci. Curabitur feugiat sagittis molestie. Duis euismod arcu vitae quam scelerisque facilisis. Praesent volutpat eleifend tortor, in malesuada dui egestas id. Donec finibus ac risus sed pellentesque. Donec malesuada non magna nec feugiat. Mauris eget nibh nec orci congue porttitor vitae eu erat. Sed commodo ipsum ipsum, in elementum neque gravida euismod. Cras mi lacus, pulvinar ut sapien ut, rutrum sagittis dui. Donec non est a metus varius finibus. Pellentesque rutrum pellentesque ligula, vitae accumsan nulla hendrerit ut.
-
-\begin{figure} % Single column figure
-	\includegraphics[width=\linewidth]{Tolmukapea.jpg}
-	\caption{Anther of thale cress (Arabidopsis thaliana), fluorescence micrograph. Source: Heiti Paves, \href{https://commons.wikimedia.org/wiki/File:Tolmukapea.jpg}{https://commons.wiki-\\media.org/wiki/File:Tolmukapea.jpg}.}
-	\label{fig:tcanther}
-\end{figure}
-
-Referencing a figure using its label: Figure \ref{fig:tcanther}.
-
-Aenean porttitor eros non pharetra congue. Proin in odio in dolor luctus auctor ac et mi. Etiam euismod mi sed lectus fringilla pretium. Phasellus tristique maximus lectus et sodales. Mauris feugiat ligula quis semper luctus. Nam sit amet felis sed leo fermentum aliquet. Mauris arcu dui, posuere id sem eget, cursus pulvinar mi. Donec nec lacus non lectus fermentum scelerisque et at nibh. Sed tristique, metus ac vestibulum porta, tortor lectus placerat lorem, et convallis tellus dolor eget ante. Pellentesque dui ligula, hendrerit a purus et, volutpat tempor lectus. Mauris nec purus nec mauris rhoncus pellentesque. Quisque quis diam sed est lacinia congue. Donec magna est, hendrerit sed metus vel, accumsan rutrum nibh.
-
-\begin{figure*} % Two column figure (notice the starred environment)
-	\includegraphics[width=\linewidth]{Fibroblastid.jpg}
-	\caption{Bovine pulmonary artery endothelial cells in culture. Blue: nuclei; red: mitochondria; green: microfilaments. Computer generated image from a 3D model based on a confocal laser scanning microscopy using fluorescent marker dyes. Source: Heiti Paves, \href{https://commons.wikimedia.org/wiki/File:Fibroblastid.jpg}{https://commons.wikimedia.org/wiki/File:Fibroblastid.jpg}.}
-	\label{fig:bpartery}
-\end{figure*}
-
-Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Etiam cursus lectus purus, tempus iaculis quam dictum tristique. Nam interdum sapien nec tempor mattis. Quisque id sapien nisi. Mauris vehicula ornare eros vel efficitur. Nulla consectetur, turpis quis fringilla tincidunt, mi neque iaculis lectus, vel commodo elit odio non ex. Duis facilisis, purus ac viverra iaculis, turpis lectus ultrices ante, ac vestibulum ligula magna in libero. Etiam tristique maximus lacinia. Vestibulum hendrerit, lacus malesuada laoreet blandit, sapien velit sollicitudin nunc, eu porttitor urna ligula at lorem. Aliquam faucibus eros in fermentum venenatis. Fusce consectetur congue pellentesque. Suspendisse at nisi sit amet est porttitor cursus. Cras placerat faucibus nunc, a laoreet justo dignissim sit amet.
-
-\subsection{International Support}
-
-\noindent àáâäãåèéêëìíîïòóôöõøùúûüÿýñçčšž
-
-\noindent ÀÁÂÄÃÅÈÉÊËÌÍÎÏÒÓÔÖÕØÙÚÛÜŸÝÑ
-
-\noindent ßÇŒÆČŠŽ
-
-\subsection{Links}
-
-This is a clickable URL link: \href{https://www.latextemplates.com}{LaTeX Templates}. This is a clickable email link: \href{mailto:vel@latextemplates.com}{vel@latextemplates.com}. This is a clickable monospaced URL link: \url{https://www.LaTeXTemplates.com}.
-
 %------------------------------------------------
 
-\section{Discussion}
+\section{Results}
 
-This statement requires citation \autocite{Smith:2023qr}. This statement requires multiple citations \autocite{Smith:2023qr, Smith:2024jd}. This statement contains an in-text citation, for directly referring to a citation like so: \textcite{Smith:2024jd}.
+\subsection{Proposed Architecture}
+For learned skills, termination conditions and the predicated the model architecture will take as an input a point cloud image of the scene.
+The point cloud is processed to generate a segmentation mask of the scene that will highlight objects of interest to a particular task. For 
+example for the skill \(\verb|ReachOnTable|\) the model will generate a segmentation mask that highlights the object that the robot needs to reach.
+Then  a PointNet++ architecture is used to extract the object-level features from the segmentation mask. The point cloud features are appended with
+the features extracted from the joint states of the arm to predict either the joint targets, in the case of the skills, or the probability of a given
+skill being terminated. The skills are trained with a linear combination of joint-space and operations loss, meanwhile the termination policies are trained
+with a binary cross-entropy loss.
 
-\subsection{Subsection One}
+\par
+\textbf{Joint-space loss}
+The joint-space loss is the mean squared error between the predicted joint targets and the ground truth joint targets. The joint targets are the joint
+angles that the robot needs to reach in order to execute a skill. The joint-space loss is defined as follows:
+\begin{equation}
+	L = \frac{1}{n} \sum_{i=1}^{n} (y_{\text{true},i} - y_{\text{pred},i})^2
+\end{equation}
 
-Suspendisse potenti. Vivamus suscipit dapibus metus. Proin auctor iaculis ex, id fermentum lectus dapibus tristique. Nullam maximus eros eget leo pretium dapibus. Nunc in auctor erat, id interdum risus. Suspendisse aliquet vehicula accumsan. In vestibulum efficitur dictum. Sed ultrices, libero nec fringilla feugiat, elit massa auctor ligula, vehicula tempor ligula felis in lectus. Suspendisse sem dui, pharetra ut sodales eu, suscipit sit amet felis. Donec pretium viverra ante, ac pulvinar eros. Suspendisse gravida consectetur urna. Pellentesque vitae leo porta, imperdiet eros eget, posuere sem. Praesent eget leo efficitur odio bibendum condimentum sit amet vel ex. Nunc maximus quam orci, quis pulvinar nibh eleifend ac. Quisque consequat lacus magna, eu posuere tellus iaculis ac. Sed vitae tortor tincidunt ante sagittis iaculis.
+\par
+\textbf{Operation loss}
+The operation loss is used to minimize the loss to the final Cartesian end-effector position. The end-effector is represented with two points, one on the
+x and y axis. These two points determine the robots end-effector position. Using forward kinematics, the joint state \(q\) is mapped for the prediction and the
+ground truth. The operation loss is defined as follows:
+\begin{equation}
+	p_{\text{true},i} = f(q_{\text{true},i})
+\end{equation}
+	
+\begin{equation}
+	p_{\text{pred},i} = f(q_{\text{pred},i})
+\end{equation}
+	
+\begin{equation}
+	L_{\text{op}} = \frac{1}{n} \sum_{i=1}^{n} (p_{\text{true},i} - p_{\text{pred},i})^2
+\end{equation}
 
-\subsection{Subsection Two}
 
-Nullam mollis tellus lorem, sed congue ipsum euismod a. Donec pulvinar neque sed ligula ornare sodales. Nulla sagittis vel lectus nec laoreet. Nulla volutpat malesuada turpis at ultricies. Ut luctus velit odio, sagittis volutpat erat aliquet vel. Donec ac neque eget neque volutpat mollis. Vestibulum viverra ligula et sapien bibendum, vel vulputate ex euismod. Curabitur nec velit velit. Aliquam vulputate lorem elit, id tempus nisl finibus sit amet. Curabitur ex turpis, consequat at lectus id, imperdiet molestie augue. Curabitur eu eros molestie purus commodo hendrerit. Quisque auctor ipsum nec mauris malesuada, non fringilla nibh viverra. Quisque gravida, metus quis semper pulvinar, dolor nisl suscipit leo, vestibulum volutpat ante justo ultrices diam. Sed id facilisis turpis, et aliquet eros.
+\subsection{Task Planning and Execution}
+The goal is defined by a list of predicates \(L_g\). A set of predicates \(p \in P\) is used to generate a logical state of the environment. The task planner finds a
+sequence of skills from the set of Skills \(S\) that will satisfy the goal. The task planner uses a breadth-first search to find the optimal sequence of skills. 
+The search algorithm takes a pair of start and goal state and generates a sequence of skills that will transform the start state into the goal state. The logical effects
+of skills are updated after each skill is executed. The preconditions of the next skill are updated based on the logical effects of the previous skill. The search algorithm
+continues until the goal is satisfied. The following algorithm describes the task planning algorithm:
+\begin{algorithm}
+	\caption{Execution}
+	\begin{algorithmic}[1]
+	\Procedure{Execute}{$L_G$}
+		\State $replan\_counter \gets 0$
+		\While{$replan\_counter < MAX\_REPLANS$}
+			\State $o \gets \textsc{Observe}()$
+			\State $P \gets \textsc{Plan}(o, L_G)$
+			\State $replan\_counter \gets replan\_counter + 1$
+			\If{$\textsc{ExecutePlan}(o, L_G, P) = \text{Success}$}
+				\State \Return Success
+			\EndIf
+		\EndWhile
+		\State \Return Failure
+	\EndProcedure
+	
+	\Procedure{ExecutePlan}{$o, L_G, P$}
+		\State $i \gets 0$
+		\While{$i < |P|$}
+			\State $s \gets P_i$
+			\While{not $\forall p \in L_P, p(o) = \text{True}$}
+				\State $i \gets i - 1$
+				\If{$i < 0$}
+					\State \Return Failure
+				\EndIf
+				\State $s \gets P_i$
+			\EndWhile
+			\State $retrial\_counter[s] \gets retrial\_counter[s] + 1$
+			\If{$retrial\_counter[s] > MAX\_RETRIALS$}
+				\State \Return Failure
+			\EndIf
+			\State $\textsc{ExecuteSkill}(s)$
+			\State $o \gets \textsc{Observe}()$
+			\If{$\forall p \in L_G, p(o) = \text{True}$}
+				\State \Return Success
+			\EndIf
+			\State $i \gets i + 1$
+		\EndWhile
+		\State \Return Failure
+	\EndProcedure
+\end{algorithmic}
+\end{algorithm}	
 
-\subsubsection{Subsubsection Example}
-
-Duis venenatis eget lectus a aliquet. Integer vulputate ante suscipit felis feugiat rutrum. Aliquam eget dolor eu augue elementum ornare. Nulla fringilla interdum volutpat. Sed tincidunt, neque quis imperdiet hendrerit, turpis sapien ornare justo, ac blandit felis sem quis diam. Proin luctus urna sit amet felis tincidunt, sed congue nunc pellentesque. Ut faucibus a magna faucibus finibus. Etiam id mi euismod, auctor nisi eget, pretium metus. Proin tincidunt interdum mi non interdum. Donec semper luctus dolor at elementum. Aenean eu congue tortor, sed hendrerit magna. Quisque a dolor ante. Mauris semper id urna id gravida. Vestibulum mi tortor, finibus eu felis in, vehicula aliquam mi.
-
-Aliquam arcu turpis, ultrices sed luctus ac, vehicula id metus. Morbi eu feugiat velit, et tempus augue. Proin ac mattis tortor. Donec tincidunt, ante rhoncus luctus semper, arcu lorem lobortis justo, nec convallis ante quam quis lectus. Aenean tincidunt sodales massa, et hendrerit tellus mattis ac. Sed non pretium nibh. 
-
-Donec cursus maximus luctus. Vivamus lobortis eros et massa porta porttitor. Nam vitae suscipit mi. Pellentesque ex tellus, iaculis vel libero at, cursus pretium sapien. Curabitur accumsan velit sit amet nulla lobortis, ut pretium ex aliquam. Proin eget volutpat orci. Morbi eu aliquet turpis. Vivamus molestie urna quis tempor tristique. Proin hendrerit sem nec tempor sollicitudin.
+\begin{figure}[htb]
+	\centering
+	\includegraphics[width=0.5\textwidth]{figures/arch_diagram.png}
+	\caption{Overview of model architecture.}
+	\label{fig:yourlabel}
+  \end{figure}
+  
 
 %----------------------------------------------------------------------------------------
 %	 REFERENCES
