--- a/report/sample.bib
+++ b/report/sample.bib
@@ -1,20 +1,17 @@
-@BOOK{Smith:2023qr,
-	title = {{B}ook {T}itle},
-	publisher = {Publisher},
-	author = {Smith, J.~M. and Jones, A.~B.},
-	year = {2023},
-	edition = {7th},
+@misc{mukherjee2021reactive,
+      title={Reactive Long Horizon Task Execution via Visual Skill and Precondition Models}, 
+      author={Shohin Mukherjee and Chris Paxton and Arsalan Mousavian and Adam Fishman and Maxim Likhachev and Dieter Fox},
+      year={2021},
+      eprint={2011.08694},
+      archivePrefix={arXiv},
+      primaryClass={cs.RO}
 }
 
-@ARTICLE{Smith:2024jd,
-	author = {Jones, A.~B. and Smith, J.~M.},
-	title = {{A}rticle {T}itle},
-	journal = {Journal title},
-	year = {2024},
-	volume = {13},
-	pages = {123-456},
-	number = {52},
-	month = {3},
-	publisher = {Publisher},
-	doi = {10.1038/s41586-021-03616-x},
+@misc{wang2022generalizable,
+      title={Generalizable Task Planning through Representation Pretraining}, 
+      author={Chen Wang and Danfei Xu and Li Fei-Fei},
+      year={2022},
+      eprint={2205.07993},
+      archivePrefix={arXiv},
+      primaryClass={cs.RO}
 }
